Add comments followed by whitespaces

--- a/index.html
+++ b/index.html
@@ -5,6 +5,29 @@
     <title>Navigation Bar</title>
 </head>
 <body>
+    <!-- Create div element for flex container -->
+
+
+
+        <!-- Create div element for flex container -->
+
+
+
+            <!-- Create div element for flex item -->
+
+
+
+            <!-- Create div element for flex item -->
+
+
+
+            <!-- Create div element for flex item -->
+
+
+            
+            <!-- Create div element for flex item -->
+
+            
 
 </body>
 </html>
