--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8"/>
     <title>Navigation Bar</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <!-- Create div element for flex container -->
