Include comments followed by whitespaces

--- a/index.html
+++ b/index.html
@@ -58,5 +58,30 @@
 
     </div>
 
+    <!-- Create a div element for flex container -->
+
+    
+
+        <!-- Create a div element for flex item -->
+        
+
+
+        <!-- Create a div element for flex item -->
+
+
+
+        <!-- Create a div element for flex item -->
+
+
+
+        <!-- Create a div element for flex item -->
+
+
+
+        <!-- Create a div element for flex item -->
+
+
+
+
 </body>
 </html>
