Include HTML elements

--- a/index.html
+++ b/index.html
@@ -60,28 +60,29 @@
 
     <!-- Create a div element for flex container -->
 
-    
+    <div class="navbar-container">
 
         <!-- Create a div element for flex item -->
         
-
-
-        <!-- Create a div element for flex item -->
-
-
+        <a class="home" href="#">Home</a>
 
         <!-- Create a div element for flex item -->
 
-
-
-        <!-- Create a div element for flex item -->
-
-
+        <a class="about" href="#">About Us</a>
 
         <!-- Create a div element for flex item -->
 
+        <a class="news" href="#">News</a>
 
+        <!-- Create a div element for flex item -->
 
+        <a class="press" href="#">Press Releases</a>
+
+        <!-- Create a div element for flex item -->
+
+        <a class="contact" href="#">Contact Us</a>
+
+    </div>
 
 </body>
 </html>
