Modify class attribute

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
     <!-- Create a div element for flex container -->
 
-    <div class="navbar-container">
+    <div class="navbar-container two">
 
         <!-- Create a div element for flex item -->
         
