--- a/index.html
+++ b/index.html
@@ -66,6 +66,10 @@
         
         <a class="home" href="#">Home</a>
 
+        <!-- Add div element for flex container -->
+
+        
+
         <!-- Create a div element for flex item -->
 
         <a class="about" href="#">About Us</a>
