Create new flex container

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
         <!-- Add div element for flex container -->
 
-        
+        <div class="middle">
 
         <!-- Create a div element for flex item -->
 
@@ -81,6 +81,8 @@
         <!-- Create a div element for flex item -->
 
         <a class="press" href="#">Press Releases</a>
+
+        </div>
 
         <!-- Create a div element for flex item -->
 
