Add HTML elements

--- a/index.html
+++ b/index.html
@@ -58,9 +58,13 @@
 
         <!-- Create a div element for flex container -->
 
+        <div>
+
         <!-- Create a div element for flex item -->
         
         <a class="home" href="#">Home</a>
+
+        </div>
 
         <!-- Add div element for flex container -->
 
@@ -68,31 +72,33 @@
 
             <!-- Create div element for flex container -->
 
-
+            <div>
 
             <!-- Create a div element for flex item -->
 
             <a class="about" href="#">About Us</a>
 
-
+            </div>
 
             <!-- Create div element for flex container -->
 
-
+            <div>
 
             <!-- Create a div element for flex item -->
 
             <a class="news" href="#">News</a>
 
-
+            </div>
 
             <!-- Create div element for flex container -->
 
-
+            <div>
 
             <!-- Create a div element for flex item -->
 
             <a class="press" href="#">Press Releases</a>
+
+            </div>
 
         </div>
 
@@ -104,7 +110,7 @@
 
         <a class="contact" href="#">Contact Us</a>
 
-        
+
 
     </div>
 
