Add HTML element

--- a/index.html
+++ b/index.html
@@ -104,14 +104,14 @@
 
         <!-- Create div element for flex container -->
 
-
+        <div>
 
         <!-- Create a div element for flex item -->
 
         <a class="contact" href="#">Contact Us</a>
 
-
-
+        </div>
+        
     </div>
 
 </body>
