--- a/index.html
+++ b/index.html
@@ -56,6 +56,10 @@
         
         </div>
 
+        <!-- Create div element for flex container -->
+
+        
+
         <!-- Create a div element for flex container -->
 
         <div>
