Add HTML elements and tags

--- a/index.html
+++ b/index.html
@@ -56,9 +56,11 @@
         
         </div>
 
+    </div>
+
         <!-- Create div element for flex container -->
 
-        
+        <div class="navbar-container two">
 
         <!-- Create a div element for flex container -->
 
