Add class attributes

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
             <!-- Create a div element for flex container -->
 
-            <div>
+            <div class="beginning">
 
             <!-- Create a div element for flex item -->
             
@@ -110,7 +110,7 @@
 
             <!-- Create div element for flex container -->
 
-            <div>
+            <div class="end">
 
                 <!-- Create a div element for flex item -->
 
