Add closing tag

--- a/index.html
+++ b/index.html
@@ -322,6 +322,7 @@
                 <a href="#">About Us</a>
             
             </div>
+        </div>
 
         <!-- Create div element for flex container -->
 
