--- a/index.html
+++ b/index.html
@@ -362,5 +362,31 @@
 
     </div>
 
+    <!-- Create div element for flex container -->
+
+        <!-- Create div element for flex container -->
+
+            <!-- Create div element for flex item -->
+
+                <!-- Add link -->
+
+            <!-- Create div element for flex item -->
+
+                <!-- Add link -->
+
+            <!-- Create div element for flex item -->
+
+                <!-- Add link -->
+
+        <!-- Create div element for flex container -->
+
+            <!-- Create div element for flex item -->
+
+                <!-- Add link -->
+
+            <!-- Create div element for flex item -->
+
+                <!-- Add link -->
+
 </body>
 </html>
