--- a/index.html
+++ b/index.html
@@ -6,7 +6,29 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    
+    <!-- Add div element for flex container -->
 
+
+
+        <!-- Add div element for flex item -->
+
+
+
+            <!-- Add link -->
+
+
+
+        <!-- Add div element for flex item -->
+
+
+
+            <!-- Add link -->
+
+
+
+        <!-- Add div element for flex item -->
+
+
+            <!-- Add link -->
 </body>
 </html>
