Add extra class attribute on elements

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
         <!-- Add div element for flex item -->
 
-        <div class="flex-item">
+        <div class="flex-item first">
 
             <!-- Add link -->
 
@@ -22,7 +22,7 @@
 
         <!-- Add div element for flex item -->
 
-        <div class="flex-item">
+        <div class="flex-item second">
 
             <!-- Add link -->
 
@@ -32,7 +32,7 @@
 
         <!-- Add div element for flex item -->
 
-        <div class="flex-item">
+        <div class="flex-item third">
 
             <!-- Add link -->
 
