--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 
     <div class="flex-container">
 
+
+        <!-- Add div element for flex container -->
+
         <!-- Add div element for flex item -->
 
         <div class="flex-item first">
