--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
                 <a href="#login">Login</a>
         
             </div>
+
+            <!-- Add div element for flex item -->
+
+                <!-- Add link -->
         </div>
     </div>
 </body>
