Add HTML elements

--- a/index.html
+++ b/index.html
@@ -47,7 +47,13 @@
 
             <!-- Add div element for flex item -->
 
+            <div class="flex-item">
+
                 <!-- Add link -->
+                
+                <a href="#register">Register</a>
+            
+            </div>
         </div>
     </div>
 </body>
