Remove extra class from each flex item

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
             <!-- Add div element for flex item -->
 
-            <div class="flex-item first">
+            <div class="flex-item">
 
                 <!-- Add link -->
 
@@ -27,7 +27,7 @@
 
             <!-- Add div element for flex item -->
 
-            <div class="flex-item second">
+            <div class="flex-item">
 
                 <!-- Add link -->
 
@@ -37,7 +37,7 @@
 
             <!-- Add div element for flex item -->
 
-            <div class="flex-item third">
+            <div class="flex-item">
 
                 <!-- Add link -->
 
