Copy the block of code and modify the content

--- a/index.html
+++ b/index.html
@@ -41,6 +41,16 @@
 
                 <!-- Add link -->
 
+                <a href="#news">News Releases</a>
+            
+            </div>
+
+            <!-- Add div element for flex item -->
+
+            <div class="flex-item">
+
+                <!-- Add link -->
+
                 <a href="#login">Login</a>
         
             </div>
